# bgstreamboy

./: .gitignore  README.md  bgstreamboy
companion/: pyproject.toml
companion/src/bgstreamboy/: __init__.py  buff_extractor.py  cli.py  log_config_installer.py  log_rotator.py  log_stream.py  log_tailer.py  perspective.py  phase_detector.py  platform_paths.py  service.py  snapshot.py  team_stats.py  tribe_tracker.py  ws_server.py
companion/tests/: demo_on_deck.py  log_builder.py  scenarios.py  smoke_service.py  test_log_rotator.py
plugin/: README.md  package-lock.json  package.json  rolldown.config.ts
plugin/com.bgstreamboy.companion.sdPlugin/: manifest.json  package-lock.json  package.json
plugin/scripts/: generate-placeholder-icons.mjs
plugin/src/: grid.ts  plugin.ts  render.ts  snapshot.ts  state.ts  ws-client.ts
plugin/src/actions/: bg-slot.ts
